# ChangeLog for net-dns/avahi
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.59 2006/09/20 19:04:45 swegener Exp $

  20 Sep 2006; Sven Wegener <swegener@gentoo.org> avahi-0.6.11.ebuild,
  avahi-0.6.12.ebuild, avahi-0.6.13.ebuild:
  Depend on proper qt with PKG_CONFIG_PATH support.

  19 Sep 2006; Aron Griffis <agriffis@gentoo.org> avahi-0.6.12.ebuild:
  Mark 0.6.12 stable on ia64

  18 Sep 2006; Sven Wegener <swegener@gentoo.org> avahi-0.6.11.ebuild,
  avahi-0.6.12.ebuild, avahi-0.6.13.ebuild:
  Remove the PKG_CONFIG_PATH workaround.

  12 Sep 2006; Sven Wegener <swegener@gentoo.org>
  files/0.6.13-svn-fixes.patch:
  Fix line endings.

*avahi-0.6.13 (10 Sep 2006)

  10 Sep 2006; Sven Wegener <swegener@gentoo.org>
  +files/0.6.13-svn-fixes.patch, +avahi-0.6.13.ebuild:
  Version bump.

  19 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> avahi-0.6.12.ebuild:
  Add ~ia64 keyword.

*avahi-0.6.12 (27 Jul 2006)

  27 Jul 2006; Sven Wegener <swegener@gentoo.org> +avahi-0.6.12.ebuild:
  Version bump.

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> avahi-0.6.10.ebuild:
  hppa stable, bug #139612

  14 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> avahi-0.6.10.ebuild:
  ppc stable, bug #139612

*avahi-0.6.11 (09 Jul 2006)

  09 Jul 2006; Sven Wegener <swegener@gentoo.org> +avahi-0.6.11.ebuild:
  Version bump. Add support for the qt4 USE flag and tweak configure logic.

  30 Jun 2006; Thomas Cort <tcort@gentoo.org> avahi-0.6.10.ebuild:
  Stable on alpha.

  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> avahi-0.6.10.ebuild:
  Stable on amd64. See bug #124293.

  24 Jun 2006; Doug Goldstein <cardoe@gentoo.org> avahi-0.6.10.ebuild:
  USE flag qt->qt3/qt4 change

  10 Jun 2006; Sven Wegener <swegener@gentoo.org> avahi-0.6.10.ebuild:
  Unset DISPLAY for bug #123318.

  26 May 2006; Markus Rothe <corsair@gentoo.org> avahi-0.6.10.ebuild:
  Stable on ppc64
