@@ -1,0 +1,3 @@
+MD5 6abad76bbc2ac0f51a8869b3a2e5c238 avahi-0.6.14.tar.gz 923556
+RMD160 dfe3a51d53e34eb1ce5eabdc176e732cda6a8e44 avahi-0.6.14.tar.gz 923556
+SHA256 e599f03b2d493b492fc23f50c5fe7bbf78af90e79a0c6c8c2e6600048e71c2e6 avahi-0.6.14.tar.gz 923556
