@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.59 2006/09/20 19:04:45 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.60 2006/09/20 19:47:43 swegener Exp $
+
+*avahi-0.6.14 (20 Sep 2006)
+
+  20 Sep 2006; Sven Wegener <swegener@gentoo.org> +files/autoipd.sh,
+  +avahi-0.6.14.ebuild:
+  Version bump.
 
   20 Sep 2006; Sven Wegener <swegener@gentoo.org> avahi-0.6.11.ebuild,
   avahi-0.6.12.ebuild, avahi-0.6.13.ebuild:
